--- a/1.Introduction-To-React/Lecture/Introduction/index.html
+++ b/1.Introduction-To-React/Lecture/Introduction/index.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First React App</title>
 
+    <!-- Import ReactJS and ReactDom -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <!-- Import babelJS -->
+    <!-- BabelJS is used to convert the older version JS to new supported version JS code. -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
     <h1>Hello React.</h1>
 
     <div id="root"></div>
 
-    <script src="./script.js">
+    <script src="./script.js" type="text/babel">
 
     </script>
 </body>
